project-cluster-hw3/deployment-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homework-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: homework-app
    template:
       metadata:
          labels:
             app: homework-app
       spec:
          containers:
          - name: video
            image: reagafonov/docker-live-probe-template-arm64:v1
            ports:
              - containerPort: 8080
