project-cluster-hw3/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
  type: ClusterIP
