project-cluster-hw3/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: video
  type: NodePort
