project-cluster-hw3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - pathType: Prefix
          path: /otusapp($|/)(.*)/health
          backend:
            service:
                name: homework-service
                port:
                    number: 8000
        - pathType: Prefix
          path: /health
          backend:
            service:
              name: homework-service
              port:
                number: 8000
